2003-07-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menustyle.c (menustyle_copy):
	(copy_menu_style):
	renamed function

2003-06-30  Marcus Lundblad  <ml@update.uu.se>

	* todo-2.6:
	Updated

2003-06-30  olicha  <olivier.chapuis@free.fr>

	* fvwm/menus.c (do_menu):
	(DestroyMenu):
	(do_menu_close_tear_off_menu):
	(menu_close_tear_off_menu):
	Allowed to destroy tear off menu!

	* fvwm/menus.c (menu_tear_off):
	(menu_close_tear_off_menu):
	(do_menu_close_tear_off_menu):
	(clone_menu_root_static):
	(pop_menu_up):
	(menu_tear_off):
	(make_menu_window):
	(make_menu):
	(update_menu):
	Fixed client leaks (only create new client for menu if it is a tear off
	menu). Created a dedicated menu style for each tear off menu.

	* fvwm/menustyle.c (CMD_CopyMenuStyle):
	(copy_menu_style):
	* fvwm/menustyle.h:
	Split CMD_CopyMenuStyle into CMD_CopyMenuStyle and copy_menu_style

2003-06-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (do_move_window_to_desk):
	(UnmapDesk):
	fixed "Visible" condition on non current desks

2003-06-29  Dominik Vogt  <dominik.vogt@gmx.de>

	**/*.c:
	**/*.h:
	shortened some comments
	removed GPL from .h files
	added GPL to all .c files
	include config.h in all .c files
	added "/* -*-c-*- */" where missing
	some reformatting and reindenting

	* fvwm/module_interface.c:
	* fvwm/module_interface.h:
	* libs/Fft.c:
	* libs/Flocale.c:
	* libs/gravity.h:
	* libs/Flocale.h:
	* fvwm/screen.h:
	* fvwm/misc.c:
	* fvwm/misc.h:
	* fvwm/windowshade.c:
	* fvwm/virtual.c:
	* fvwm/conditional.c:
	* fvwm/geometry.h:
	* fvwm/geometry.c:
	* fvwm/borders.c:
	* fvwm/frame.h:
	* fvwm/frame.c:
	* fvwm/update.c:
	* fvwm/session.c:
	* fvwm/placement.c:
	* fvwm/menus.c:
	* fvwm/icons.c:
	* fvwm/events.c:
	* fvwm/add_window.c:
	* fvwm/session.h:
	* fvwm/placement.h:
	* fvwm/icons.h:
	* fvwm/eventhandler.h:
	* fvwm/fvwm.h:
	* fvwm/add_window.h:
	* fvwm/repeat.c:
	* fvwm/functions.c:
	* fvwm/functable.c:
	* fvwm/functable.h:
	* fvwm/functions.h: