@@ -1,3 +1,9 @@
+2003-07-01  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/menus.c (DestroyMenu):
+	(do_menu):
+	Cleanup
+
 2003-07-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menustyle.c (menustyle_copy):
